# adaptive-norm-based-regularization

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mypy.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
anbr/: __init__.py  cv.py  data.py  losses.py  metrics.py  network.py  optimizer.py  regularizers.py  trainer.py
demo/: __init__.py  run_real_data.py  run_simulation.py
docs/: api.md  architecture.md  faq.md  fidelity.md  getting-started.md  math.md  usage.md
docs/superpowers/plans/: 2026-05-06-anbr-reproduction.md
docs/superpowers/specs/: 2026-05-06-anbr-reproduction-design.md
tests/: __init__.py  test_data.py  test_integration.py  test_losses.py  test_metrics.py  test_network.py  test_optimizer.py  test_regularizers.py
