[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anbr"
version = "0.1.0"
description = "Pure Python reproduction of Adaptive Norm-Based Regularization for Neural Networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["anbr*", "tests*", "demo*"]

[tool.isort]
profile = "black"
line_length = 80
known_first_party = ["anbr"]
